# lightpanda_strmly

./: README.md  chrome_installer.py  init_lightpanda.py  install_chrome.py  install_chrome.sh  install_packages.sh  main.py  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
pages/: ai_chat_scraper.py  auto_table_scraper.py  solver.py
src/: backend.py  main.py  setup.py
src/browser/: __init__.py  chrome_installer.py  install_chrome.py  paths.py
src/cf_solver/: solver_zendriver.py
src/components/: __init__.py  browser_manager.py  cookies.py  page_fetcher.py  proxy_service.py  session_state.py  solver_runner.py  url_utils.py
src/lightpanda_local/: __init__.py  app.py  init_lightpanda.py  lightpanda_service.py
