[project]
name = "chrome-cf-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "streamlit>=1.30",
    "latest_user_agents==0.0.5",
    "selenium_authenticated_proxy==1.1.2",
    "user_agents==2.2.0",
    "zendriver==0.15.2",
    "openai>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "lxml>=4.9.0"
    ]
